More Changes V2 AAAAA

--- a/ABCFoodCatering/Pages/Shared/_Layout.cshtml
+++ b/ABCFoodCatering/Pages/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="~/" class="navbar-brand">ABCFoodCatering</a>
+                <a href="~/Identity/Account/Login" class="navbar-brand">ABCFoodCatering</a>
             </div>
             <div class="navbar-collapse collapse">
                 @{
