More things part 2: AAAAAAAA

--- a/ABCFoodCatering/Pages/Shared/_Layout.cshtml
+++ b/ABCFoodCatering/Pages/Shared/_Layout.cshtml
@@ -30,7 +30,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="~/Identity/Account/Login" class="navbar-brand">ABCFoodCatering</a>
+                <a href="#" class="navbar-brand">ABCFoodCatering</a>
+                <!-- ~/Identity/Account/Login -->
             </div>
             <div class="navbar-collapse collapse">
                 @{
