--- a/ABCFoodCatering/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ABCFoodCatering/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,10 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            @if (User.IsInRole("Client"))
+            {
+                <p>Dropdown list of roles to go here</p>
+            }
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
