--- a/ABCFoodCatering/Pages/Shared/_LoginPartial.cshtml
+++ b/ABCFoodCatering/Pages/Shared/_LoginPartial.cshtml
@@ -8,14 +8,27 @@
 
 @if (SignInManager.IsSignedIn(User) && User.IsInRole("Client"))
 {
-    
+
     ViewData["Title"] = "Profile";
-    
+
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="Identity" asp-page="/Account/Orders/ManageOrders" title="Manage Orders">Manage Orders</a>
+                <a asp-area="Identity" asp-page="/Account/Orders/Index" title="Manage Orders">Manage Orders</a>
             </li>
+            <li>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            </li>
+            <li>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
+            </li>
+        </ul>
+    </form>
+}
+else if (SignInManager.IsSignedIn(User) /*&& User.IsInRole("Admin")*/)
+{
+    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
+        <ul class="nav navbar-nav navbar-right">
             <li>
                 <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
