--- a/ABCFoodCatering/Areas/Identity/Pages/Account/Orders/Delete.cshtml
+++ b/ABCFoodCatering/Areas/Identity/Pages/Account/Orders/Delete.cshtml
@@ -5,11 +5,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Are you sure you want to delete this order?</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
 <div>
-    <h4>Order</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -63,8 +62,8 @@
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Order.OrderID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="hidden" asp-for="Order.OrderID" class="btn btn-danger"/>
+        <input type="submit" value="Delete" class="btn btn-default" /> 
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
