--- a/ABCFoodCatering/Areas/Identity/Pages/Account/Orders/Details.cshtml
+++ b/ABCFoodCatering/Areas/Identity/Pages/Account/Orders/Details.cshtml
@@ -5,11 +5,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Order Details</h2>
 
 <div>
-    <h4>Order</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Order.FoodDescription)
@@ -62,6 +60,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Order.OrderID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Order.OrderID" class="btn btn-warning">Edit</a> 
+    <a asp-page="./Index" class="btn btn-info">Back to List</a>
 </div>
