--- a/ABCFoodCatering/Areas/Identity/Pages/Account/ViewOrders.cshtml
+++ b/ABCFoodCatering/Areas/Identity/Pages/Account/ViewOrders.cshtml
@@ -1,14 +1,14 @@
 ﻿@page
-@model ABCFoodCatering.Areas.Identity.Pages.Account.Orders.IndexModel
+@model ABCFoodCatering.Areas.Identity.Pages.Account.ViewOrdersModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ViewOrders";
 }
 
-<h2>Manage Orders</h2>
+<h2>My Orders</h2>
 
 <p>
-    <a asp-page="Create" class="btn btn-success">Add New Order</a>
+    <a asp-page="PlaceOrder">Place Order</a>
 </p>
 <table class="table">
     <thead>
@@ -68,9 +68,9 @@
                 @Html.DisplayFor(modelItem => item.orderCompleted)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.OrderID" class="btn btn-warning">Edit</a> 
-                <a asp-page="./Details" asp-route-id="@item.OrderID" class="btn btn-info">Details</a> 
-                <a asp-page="./Delete" asp-route-id="@item.OrderID" class="btn btn-danger">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.OrderID">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.OrderID">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.OrderID">Delete</a>
             </td>
         </tr>
 }
