Minor changes and fixes

--- a/ABCFoodCatering/Areas/Identity/Pages/Account/EditOrder.cshtml
+++ b/ABCFoodCatering/Areas/Identity/Pages/Account/EditOrder.cshtml
@@ -1,16 +1,17 @@
 ﻿@page
-@model ABCFoodCatering.Areas.Identity.Pages.Account.PlaceOrderModel
+@model ABCFoodCatering.Areas.Identity.Pages.Account.EditOrderModel
 
 @{
-    ViewData["Title"] = "PlaceOrder";
+    ViewData["Title"] = "EditOrder";
 }
 
-<h2>Place Order</h2>
+<h2>Edit Order Details</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Order.OrderID" />
             <div class="form-group">
                 <label asp-for="Order.FoodDescription" class="control-label"></label>
                 <input asp-for="Order.FoodDescription" class="form-control" />
@@ -47,14 +48,21 @@
                 <span asp-validation-for="Order.OrderDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Place Order" class="btn btn-default" />
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="Order.orderCompleted" /> @Html.DisplayNameFor(model => model.Order.orderCompleted)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="ViewOrders">Return Home</a>
+    <a asp-page="./ViewOrders">Back to List</a>
 </div>
 
 @section Scripts {
