--- a/ABCFoodCatering/Areas/Identity/Pages/Account/Orders/Index.cshtml
+++ b/ABCFoodCatering/Areas/Identity/Pages/Account/Orders/Index.cshtml
@@ -41,38 +41,48 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Order) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FoodDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeliveryAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeliveryDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeliveryTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ClientName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.orderCompleted)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.OrderID" class="btn btn-warning">Edit</a> 
-                <a asp-page="./Details" asp-route-id="@item.OrderID" class="btn btn-info">Details</a> 
-                <a asp-page="./Delete" asp-route-id="@item.OrderID" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Order)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FoodDescription)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DeliveryAddress)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DeliveryDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DeliveryTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ClientName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.orderCompleted)
+                </td>
+                <td>
+                    @if (item.orderCompleted == true)
+                    {
+                        <a asp-page="./Edit" asp-route-id="@item.OrderID" class="btn btn-warning" style="display:none">Edit</a>
+                        <a asp-page="./Details" asp-route-id="@item.OrderID" class="btn btn-info">Details</a>
+                        <a asp-page="./Delete" asp-route-id="@item.OrderID" class="btn btn-danger" style="display:none">Delete</a>
+                    }
+                    else
+                    {
+                        <a asp-page="./Edit" asp-route-id="@item.OrderID" class="btn btn-warning">Edit</a>
+                        <a asp-page="./Details" asp-route-id="@item.OrderID" class="btn btn-info">Details</a>
+                        <a asp-page="./Delete" asp-route-id="@item.OrderID" class="btn btn-danger">Delete</a>
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
