--- a/ABCFoodCatering/Areas/Identity/Pages/Account/CancelOrder.cshtml
+++ b/ABCFoodCatering/Areas/Identity/Pages/Account/CancelOrder.cshtml
@@ -1,14 +1,13 @@
 ﻿@page
-@model ABCFoodCatering.Areas.Identity.Pages.Account.Orders.DeleteModel
+@model ABCFoodCatering.Areas.Identity.Pages.Account.CancelOrderModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "CancelOrder";
 }
 
-<h2>Are you sure you want to delete this order?</h2>
-
-
+<h3>Are you sure you want to cancel your order?</h3>
 <div>
+    <h4>Order</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -63,7 +62,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="Order.OrderID" />
-        <input type="submit" value="Delete Order" class="btn btn-danger" /> 
-        <a asp-page="./Index" class="btn btn-info">Return Home</a>
+        <input type="submit" value="Cancel Order" class="btn btn-danger" /> |
+        <a asp-page="./ViewOrders">Return Home</a>
     </form>
 </div>
