--- a/ABCFoodCatering/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ABCFoodCatering/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Register for an account";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -9,7 +9,6 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
